fix menu botton mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,14 +2,14 @@
 .header-container {
     display: flex;
     align-items: center;
-    justify-content: space-between; /* Adjusts position: center, left, or right */
-    padding: 20px;
+    justify-content: center; /* Adjusts position: center, left, or right */
+    padding: 15px;
     background-color: #ffffff; /* Background color for the header */
     font-family: "Handlee", cursive;
     border-top: 7px solid #137727; /* Thin top border */
     border-bottom: 1px solid #ddd; /* Thin bottom border */
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1); /* Optional subtle shadow */
-    height: 70px;
+    height: 50px;
     margin: 0 auto; /* Centers the header on the page */
     width: 100%;
 }
@@ -20,8 +20,9 @@
     margin: 0 auto;
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    padding: 50px;
+    justify-content: center;
+    padding: 5px;
+    gap: 150px;
 }
 
 .menu-toggle {
@@ -63,21 +64,22 @@
 @media (max-width: 600px) {
     .header-container {
         position: relative;
-        flex-direction: column;
+        flex-direction: row;
         align-items: center;
         padding: 10px;
         width: 100%;
     }
 
     .header-content {
-        position: relative;
-        flex-direction: column;
-        align-items: center;
+        flex-direction: row;
+        justify-content: space-between;
+        width: 100%;
     }
 
     .site-name {
         font-size: 20px; /* Reduce font size on mobile */
         margin-bottom: 10px; /* Add spacing between title and nav */
+        margin-right: auto;
     }
     
     .nav-links {
